Fixing alignments

--- a/codalab/apps/web/static/foundation/sass/_settings.scss
+++ b/codalab/apps/web/static/foundation/sass/_settings.scss
@@ -105,8 +105,11 @@ span.has-tip {
 	border-bottom: 0px;
 }
 
+html.js body.body div#layout.container div.large-12 div.row div.large-10 div.section-container section.active div.content div.row div.large-3 {
+	padding-top: 13px;
+}
 
-html.js body.body div#layout.container div.large-12 div.row div.large-10 div.section-container section.active div.content div.row div.large-9 div.competition-tile article.subContainer div.articleTextArea div.small-10 button.globalYellowButtonSmall a {
+div.competition-tile article.subContainer div.articleTextArea div.small-10 button.globalYellowButtonSmall a {
 	color: $foreground;
 }
 
