--- a/codalab/apps/web/static/site/css/Main.css
+++ b/codalab/apps/web/static/site/css/Main.css
@@ -908,6 +908,7 @@ input[type="submit"][value="Delete"]
     margin-bottom:10px;
     min-height:110px;
     background:#fafafa;
+    vertical-align: top;
 }
 
 .compBlockRightContainer .competition-tile {
